# dblp-data-analysis

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: .gitignore
notebooks/: EDA.ipynb  Initial_data_profiling.ipynb  duckdb_tests.ipynb
src/: constants.py
src/data_loading/: alias_builder.py  data_loader.py
src/graph/: collaboration_graph.py
src/trend_analysis/: trend_analysis.py
src/utils/: logger.py
