[tool.poetry]
name = "tmp"
version = "0.1.0"
description = "Nokia Recruitment"
authors = ["Jędrzej Sajnóg <sajnog.jedrzej@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
duckdb = "^0.9.2"
numpy = "^1.26.4"
pandas = "^2.1.3"
jupyterlab = "^4.0.9"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
